package Inscryption.Affichage;

public class Commande {
}
