package Inscryption.Logique;

public class CarteLogic {
}
