package Inscryption.Logique;

public class CarteObstacleLogic {
}
